made navbar fixed on mobile screens

--- a/src/components/aboutcomp/AboutComp.scss
+++ b/src/components/aboutcomp/AboutComp.scss
@@ -133,6 +133,8 @@
 @media (320px <= width <= 480px) {
   .about-container {
     width: 100vw;
+    margin-top: 75px;
+    
     .main-title {
       color: #35294d;
       font-weight: bolder;
