--- a/src/components/servicescomp/ServicesComp.scss
+++ b/src/components/servicescomp/ServicesComp.scss
@@ -128,6 +128,8 @@
 
 @media (320px <= width <= 480px) {
   .services-container {
+    margin-top: 75px;
+
     #servicesTextBottom {
       padding: 0 40px;
     }
